tests/semantic_errors/files/proj_5_assign_void_ptr.c
int main() {
    void *p;
    p = 0;
    p = 2;
    return 0;
}
